# adc_project_MK_IV

./: .gitignore  CMakeLists.txt  README.md  adc.c  adc.h  analysis.c  analysis.h  fault.c  fault.h  fault_report.txt  io.c  io.h  log analysis results.txt  logbook  logbookmk1 .txt  main.c  report.c  report.h  results.txt  stats.c  stats.h
